[package]
name = "gqltools"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
structopt = "0.2.13"
regex = "1.0.6"
lazy_static = "1.2.0"
term = "0.5.1"
diff = "0.1"
itertools = "0.7.11"
reqwest = "0.9.5"
serde_json = "1.0.33"
graphql-parser = "0.2.2"
glob = "0.2"
colored_json = "1.0.0"
graphql_client_codegen = { git = "https://github.com/davidpdrsn/graphql-client.git" }
syn = "0.15.26"
colored = "1.7.0"
